--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,22 @@
-html, body
+body
 {
+    background-color: cyan;
     margin: 0;
     padding: 0;
 }
 
+#wrapper
+{
+    background-color: #ffffff80;
+    text-align: center;
+    margin: 5%;
+    padding: 1%;
+    border-radius: 10px;
+}
+
 canvas
 {
-    display: block;
+    border: solid black 1px;
 }
+
+
